--- a/frontend/src/app/components/carnet-list/carnet-list.component.html
+++ b/frontend/src/app/components/carnet-list/carnet-list.component.html
@@ -14,7 +14,7 @@
             </span>
           </td>
         
-<div><img [src]="carnet.photo" /></div>
+  <div>categorie:<p>{{carnet.categorie}}</p> </div>  
   <div>nom:<p>{{carnet.nom}}</p> </div>    
    <div>prenom:<p>{{carnet.prenom}}</p> </div> 
 
