--- a/frontend/src/app/components/contact/contact.component.html
+++ b/frontend/src/app/components/contact/contact.component.html
@@ -224,6 +224,6 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="/contact" class="btn btn-lg b ma btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 </body>
