delete of message

--- a/frontend/src/app/components/message-gestion/message-gestion.component.html
+++ b/frontend/src/app/components/message-gestion/message-gestion.component.html
@@ -20,7 +20,7 @@
           <td>{{message.mess}}</td>
           <td class="text-center edit-block">
             <span class="delete">
-              <button type="button" class="btn btn-danger" (click)="deleteMessage(message._id)">Delete</button>
+              <button type="button" class="btn btn-danger" (click)="onDelete(message)">Delete</button>
             </span>
           </td>
         </tr>
