--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <body>
-       <!-- Topbar Start -->
-       <div class="container-fluid py-2 border-bottom d-none d-lg-block">
+      <!-- Topbar Start -->
+      <div class="container-fluid py-2 border-bottom d-none d-lg-block">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
@@ -39,7 +39,7 @@
     <div class="container-fluid sticky-top bg-white shadow-sm">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
-                <a href="index.html" class="navbar-brand">
+                <a href="/home" class="navbar-brand">
                     <h1 class="m-0 text-uppercase "><i class="fa fa-clinic-medical me-2 ml-5"></i>DR. Nessrine machat</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -47,19 +47,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="/home" class="nav-item nav-link ">Accueil</a>
-                        <a href="about.html" class="nav-item nav-link active">A Propos</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="price.html" class="nav-item nav-link">Tarification</a>
+                        <a href="/home" class="nav-item nav-link active">Accueil</a>
+                        <a href="/about" class="nav-item nav-link">A Propos</a>
+                        <a href="/service" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="detail.html" class="dropdown-item">Blog Detail</a>
-                                <a href="team.html" class="dropdown-item">The Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="blog" class="dropdown-item">Blog Grid</a>
+                                <a href="detail" class="dropdown-item">Blog Detail</a>
+                                <a href="team" class="dropdown-item">The Team</a>
+                                <a href="testimonial" class="dropdown-item">Testimonial</a>
                                 <a href="/appointment" class="dropdown-item">Appointment</a>
-                                <a href="search.html" class="dropdown-item">Search</a>
+                                <a href="search" class="dropdown-item">Search</a>
                             </div>
                         </div>
                         <a href="/contact" class="nav-item nav-link">Contact</a>
@@ -70,8 +69,9 @@
     </div>
     <!-- Navbar End -->
 
-    <!-- About Start -->
-    <div class="container-fluid py-5">
+
+     <!-- About Start -->
+     <div class="container-fluid py-5">
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
@@ -81,33 +81,35 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="mb-4">
-                        <h5 class="d-inline-block  text-uppercase border-bottom border-5">A propos de nous</h5>
-                        <h1 class="display-4">Best Medical Care For Yourself and Your Family</h1>
+                        <h5 class="d-inline-block  text-uppercase border-bottom border-5 text-black">About Us</h5>
+                        <h1 class="display-4">A propos de nous</h1>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                    <p>Bienvenue sur mon site dédiée à la gynécologie ! Je suis Nessrine machat, votre gynécologue qualifiée avec [nombre d'années] d'expérience dans le domaine de la santé des femmes. Mon objectif principal est de fournir des soins de qualité, bienveillants et holistiques aux femmes de tous âges, en veillant à leur santé reproductive et à leur bien-être global.</p>
+                    <p>Je suis passionnée par l'amélioration de la santé des femmes et je m'engage à offrir un environnement chaleureux et confortable où les femmes peuvent poser toutes leurs questions et recevoir des soins personnalisés en fonction de leurs besoins spécifiques. </p>
+                    <p> Que vous ayez besoin d'un dépistage du cancer du col de l'utérus, d'un suivi de grossesse, de conseils en matière de contraception, ou de toute autre préoccupation liée à la gynécologie, vous pouvez compter sur moi pour vous offrir des soins de qualité et respectueux. Je suis impatiente de vous rencontrer et de vous accompagner dans votre parcours de santé.</p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-user-md  mb-3"></i>
-                                <h6 class="mb-0">médecin <small class="d-block ">qualifié</small></h6>
+                                <h6 class="mb-0 text-black">médecin <small class="d-block text-black ">qualifié</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-procedures  mb-3"></i>
-                                <h6 class="mb-0">Services<small class="d-block ">D'urgence</small></h6>
+                                <h6 class="mb-0 text-black">Services<small class="d-block text-black">D'urgence</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope  mb-3"></i>
-                                <h6 class="mb-0">Analyses<small class="d-block ">précises</small></h6>
+                                <h6 class="mb-0 text-black">Analyses<small class="d-block text-black">précises</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-heartbeat mb-3" aria-hidden="true"></i>
-                                <h6 class="mb-0">Free<small class="d-block ">Ambulance</small></h6>
+                                <h6 class="mb-0 text-black">Free<small class="d-block text-black">Ambulance</small></h6>
                             </div>
                         </div>
                     </div>
@@ -116,84 +118,17 @@
         </div>
     </div>
     <!-- About End -->
-
-   
-
-   
-
-
+    
 
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
-                    <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor</p>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
-                    <p class="mb-0"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Newsletter</h4>
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
-                            <button class="btn btn-primary">Sign Up</button>
-                        </div>
-                    </form>
-                    <h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
-                    <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid bg-dark text-light border-top border-secondary py-4">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. All Rights Reserved.</p>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <p class="mb-0">Designed by <a class="text-primary" href="https://htmlcodex.com">HTML Codex</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+<app-footer></app-footer>
     <!-- Footer End -->
 
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+<!-- Back to Top -->
+<a href="/about" class="btn btn-lg b ma btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    
 
 
 </body>
