--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,80 @@
-<p>footer works!</p>
+
+<footer style="background-color:#f39999">
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #f6f6f6;">shopping online</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">frequently asked questions</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">delivery</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">pricing</a>
+            </li>
+            <li>
+              <a href="#!" style="color: #4f4f4f;">where we deliver?</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">git cards</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">frequently asked questions</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">delivery and payment</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">activate the card</a>
+            </li>
+            <li>
+              <a href="#!" style="color: #4f4f4f;">rules</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">company</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">buy a gift card</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">history</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">return</a>
+            </li>
+            <li>
+              <a href="#!" style="color: #4f4f4f;">contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">diamond club</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">registration</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">application</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">about program</a>
+            </li>
+            <li>
+              <a href="#!" style="color: #4f4f4f;">rules</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      ©   {{ currentYear }} Copyright: 
+      <a class="text-dark" href="/home">Nessrine Machat</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
