--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -99,33 +99,35 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="mb-4">
-                        <h5 class="d-inline-block  text-uppercase border-bottom border-5 text-black">A propos de nous</h5>
-                        <h1 class="display-4">Best Medical Care For Yourself and Your Family</h1>
+                        <h5 class="d-inline-block  text-uppercase border-bottom border-5 text-black">About Us</h5>
+                        <h1 class="display-4">A propos de nous</h1>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                    <p>Bienvenue sur mon site dédiée à la gynécologie ! Je suis Nessrine machat, votre gynécologue qualifiée avec [nombre d'années] d'expérience dans le domaine de la santé des femmes. Mon objectif principal est de fournir des soins de qualité, bienveillants et holistiques aux femmes de tous âges, en veillant à leur santé reproductive et à leur bien-être global.</p>
+                    <p>Je suis passionnée par l'amélioration de la santé des femmes et je m'engage à offrir un environnement chaleureux et confortable où les femmes peuvent poser toutes leurs questions et recevoir des soins personnalisés en fonction de leurs besoins spécifiques. </p>
+                    <p> Que vous ayez besoin d'un dépistage du cancer du col de l'utérus, d'un suivi de grossesse, de conseils en matière de contraception, ou de toute autre préoccupation liée à la gynécologie, vous pouvez compter sur moi pour vous offrir des soins de qualité et respectueux. Je suis impatiente de vous rencontrer et de vous accompagner dans votre parcours de santé.</p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-user-md  mb-3"></i>
-                                <h6 class="mb-0">médecin <small class="d-block ">qualifié</small></h6>
+                                <h6 class="mb-0 text-black">médecin <small class="d-block text-black ">qualifié</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-procedures  mb-3"></i>
-                                <h6 class="mb-0">Services<small class="d-block ">D'urgence</small></h6>
+                                <h6 class="mb-0 text-black">Services<small class="d-block text-black">D'urgence</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope  mb-3"></i>
-                                <h6 class="mb-0">Analyses<small class="d-block ">précises</small></h6>
+                                <h6 class="mb-0 text-black">Analyses<small class="d-block text-black">précises</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-heartbeat mb-3" aria-hidden="true"></i>
-                                <h6 class="mb-0">Free<small class="d-block ">Ambulance</small></h6>
+                                <h6 class="mb-0 text-black">Free<small class="d-block text-black">Ambulance</small></h6>
                             </div>
                         </div>
                     </div>
@@ -239,24 +241,14 @@
                 <h1 class="display-4"> Nos Articles </h1>
             </div>
             <div class="row g-5">
-                <div class="col-xl-4 col-lg-6">
+                <div class="col-xl-4 col-lg-6" *ngFor="let article of articles">
                     <div class="bg-light rounded overflow-hidden">
-                        <img class="img-fluid w-100" src="assets/img/blog-1.jpg" alt="">
+                        <img class="img-fluid w-100" *ngIf="article.photo" [src]="'http://localhost:4000/uploads/' + article.photo"  alt="Article photo">
                         <div class="p-4">
-                            <a class="h3 d-block mb-3" href="">Dolor clita vero elitr sea stet dolor justo  diam</a>
-                            <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
-                                rebum clita rebum dolor stet amet justo</p>
+                            <a class="h3 d-block mb-3" href="">{{ article.title }}</a>
+                            <p class="m-0">{{ article.content }}</p>
                         </div>
-                        <div class="d-flex justify-content-between border-top p-4">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="assets/img/user.jpg" width="25" height="25" alt="">
-                                <small>John Doe</small>
-                            </div>
-                            <div class="d-flex align-items-center">
-                                <small class="ms-3"><i class="far fa-eye  me-1"></i>12345</small>
-                                <small class="ms-3"><i class="far fa-comment  me-1"></i>123</small>
-                            </div>
-                        </div>
+                     
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6">
@@ -303,57 +295,7 @@
         </div>
     </div>
     <!-- Blog End -->
-    
+    <!-- Footer Start --><app-footer></app-footer>  <!-- Footer End -->
+    <a href="/home" class="btn btn-lg b ma btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block  text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
-                    <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor</p>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt  me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-envelope  me-3"></i>info@example.com</p>
-                    <p class="mb-0"><i class="fa fa-phone-alt  me-3"></i>+012 345 67890</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block  text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block  text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="/contact"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block  text-uppercase border-bottom border-5 border-secondary mb-4">Newsletter</h4>
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
-                            <button class="btn btn-primary">Sign Up</button>
-                        </div>
-                    </form>
-                    <h6 class=" text-uppercase mt-4 mb-3">Follow Us</h6>
-                    <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+</body>
