--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -144,7 +144,7 @@
     <div class="pcoded-content">
         <!-- [ breadcrumb ] start -->
         <div class="page-header container">
-            <div class="page-block">
+            <div class="page-block ">
                 <div class="row align-items-center">
                     <div class="col-md-16">
                         <div class="page-header-title">
@@ -203,7 +203,7 @@
                     <div class="card-footer bg-c-green">
                         <div class="row align-items-center">
                             <div class="col-md-9">
-                                <a href="admin/listR" class="text-white m-b-0">Consulter les rendez-vous</a>
+                                <a href="admin/listapp" class="text-white m-b-0">Consulter les rendez-vous</a>
                             </div>
                             <div class="col-3 text-right">
                                 <i class="feather icon-trending-up text-white f-16"></i>
