--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -212,6 +212,58 @@
                     </div>
                 </div>
             </div>   
+            <div class="row">
+                <div class="mx-auto  col-md-5 ">
+                    <div class="card ">
+                        <div class="card-body ">
+                            <div class="row align-items-center ">
+                                <div class="col-8">
+                                    <h1 class="text-c-green">{{ nbrP }}</h1>
+                                    <h3 class="text-muted m-b-0">Réclamations</h3>
+                                </div>
+                                <div class="col-4 text-right">
+                                        <img  class="ico" src="/assets/icons/msg.png" >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-c-green">
+                            <div class="row align-items-center">
+                                <div class="col-md-9">
+                                    <a href="admin/listP" class="text-white m-b-0">Consulter les réclamations</a>
+                                </div>
+                                <div class="col-3 text-right">
+                                    <i class="feather icon-trending-up text-white f-16"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 ">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row align-items-center">
+                                <div class="col-md-8">
+                                    <h1 class="text-c-green">{{ nbrP}}</h1>
+                                    <h3 class="text-muted m-b-0">Articles</h3>
+                                </div>
+                                <div class="col-4 text-right ">
+                                    <img class ="ico" src="/assets/icons/articl.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-c-green">
+                            <div class="row align-items-center">
+                                <div class="col-md-9">
+                                    <a href="/blog" class="text-white m-b-0">Consulter les articles</a>
+                                </div>
+                                <div class="col-3 text-right">
+                                    <i class="feather icon-trending-up text-white f-16"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>   
+                </div>
   
 </div>
 </div>
