--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.css
@@ -13,6 +13,11 @@
     height: 30px;
     background-size: cover;
   }
+  .ico {
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+  }
 a{
     color: white;
 }
