fixing réclamations frontend  page

--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -69,11 +69,11 @@
                 </ul>
             </li>
         <li class="nav-item pcoded-hasmenu">
-            <a href="/admin/recl" class="nav-link "><span>
+            <a href="/admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
                <span class="pcoded-mtext">Gérer les réclamations</span></a>
             <ul class="pcoded-submenu">
-                <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
+                <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
         </li>
         <br><br><br>
@@ -229,7 +229,7 @@
                         <div class="card-footer bg-c-green">
                             <div class="row align-items-center">
                                 <div class="col-md-9">
-                                    <a href="admin/listP" class="text-white m-b-0">Consulter les réclamations</a>
+                                    <a href="admin/listR" class="text-white m-b-0">Consulter les réclamations</a>
                                 </div>
                                 <div class="col-3 text-right">
                                     <i class="feather icon-trending-up text-white f-16"></i>
