--- a/frontend/src/app/components/reclamation-list/reclamation-list.component.html
+++ b/frontend/src/app/components/reclamation-list/reclamation-list.component.html
@@ -1,21 +1,226 @@
-<div>
-    <h2>Messages</h2>
-    <table>
-      <tr>
-        <th>ID</th>
-        <th>Nom</th>
-        <th>Email</th>
-        <th>Subject</th>
-        <th>Message</th>
-        <th>Actions</th>
-      </tr>
-      <tr>
-      <div *ngFor="let message of messages">
-        <h2>{{ message.nom }}</h2>
-        <p>{{ message.email }}</p>
-        <p>{{ message.subject }}</p>
-        <p>{{ message.mess }}</p>
-        <button *ngIf="message._id" (click)="deleteMessage(message._id)">Delete</button>
-      </div>   </tr>   
-    </table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>PFE</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="">
+    <meta name="author" content="Phoenixcoded" />
+    <!-- Favicon icon -->
+
+    
+    <link rel="icon" href="/assets/admin/images/favicon.ico" type="image/x-icon">
+    <!-- vendor css -->
+    <link rel="stylesheet" href="/assets/admin/css/style.css">
+</head>
+<body style="background-color: rgb(231, 111, 167);"  >
+	<!-- [ navigation menu ] start -->
+	<nav class="pcoded-navbar menu-dark ">
+		<div class="navbar-wrapper  ">
+			<div class="navbar-content scroll-div " >
+				<div >
+					<div class="main-menu-header">
+						<img class="img-radius" src="/assets/img/gyne.png" alt="User-Profile-Image">
+						<div class="user-details">
+							<div id="more-details">Docteur Nesrine Machat <i class="fa fa-caret-down"></i>
+                            </div>
+						</div>
+					</div>
+				</div>
+<br><br>
+				<ul class="nav pcoded-inner-navbar contain "id="tit1">
+					<li class="nav-item">
+					    <a href="admin/dashboard" class="nav-link "><span>
+                      <img src="/assets/icons/home.png" class="icon"></span>
+                      <span class="pcoded-mtext">Tableau de bord</span></a>
+					</li>
+                    
+               <li class="nav-item pcoded-hasmenu">
+                  <a href="/admin/listP" class="nav-link "><span>
+                     <img src="/assets/icons/woman.png"  class="icon"></span>
+                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                  <ul class="pcoded-submenu">
+                      <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/recl" class="nav-link "><span>
+                   <img src="/assets/icons/rendez.png" class="icon"></span>
+                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
+                </ul>
+              <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/listP" class="nav-link "><span>
+                   <img src="assets/icons/medica.png"  class="icon" ></span>
+                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
+                </ul>
+            </li>
+            <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/listP" class="nav-link "><span>
+                   <img src="/assets/icons/analysee.png" class="icon"></span>
+                   <span class="pcoded-mtext">Gérer les analyses</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
+                </ul>
+            </li>
+        <li class="nav-item pcoded-hasmenu">
+            <a href="/admin/recl" class="nav-link "><span>
+                <img src="/assets/icons/msg.png" class="icon"></span>
+               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+            <ul class="pcoded-submenu">
+                <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
+            </ul>
+        </li>
+        <br><br><br>
+		<li><a href="/login" ><i class="fa fa-sign-out black_color text-bold"></i> 
+			<span>Déconnexion</span></a></li>		
+    </ul>
+			</div>
+		</div>
+	</nav>
+	<!-- [ navigation menu ] end -->
+	<!-- [ Header ] start -->
+	<header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
+		<div class="m-header">
+					<a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
+					<a href="#!" class="b-brand">
+						<!-- ========   change your logo hear   ============ -->
+						<img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
+					</a>
+					<a href="#!" class="mob-toggler" >
+						<i class="feather icon-more-vertical"></i>
+					</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav mr-auto">
+                        
+						<li class="nav-item" id="logout">
+							<a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
+							<div class="search-bar">
+								<input type="text" id="m-search" class="form-control"  
+                                placeholder="Rechercher...">
+								<button type="button" class="close" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</li>
+					</ul>
+					<ul class="navbar-nav ml-auto">
+                      
+						<li>
+							<div class="dropdown" id="logout">
+								<a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
+								<div class="dropdown-menu dropdown-menu-right notification">
+									<div class="noti-head" >
+										<h6 class="d-inline-block m-b-0">Notifications</h6>
+									</div>
+								</div>
+							</div>
+						</li>&nbsp;&nbsp;&nbsp;
+						<li>
+							<div class="dropdown drp-user">
+								<a href="/login"  id="logout"
+                                     class="dropdown-toggle" data-toggle="dropdown">
+									<i class="feather icon-log-out"></i>
+								</a>
+							</div>
+						</li>
+                        <li>
+                            
+                        </li>
+					</ul>
+				</div>
+				
+			
+	</header>
+	<!-- [ Header ] end -->
+<!-- [ Main Content ] start -->
+<section class="pcoded-main-container">
+    <div class="pcoded-content">
+        <!-- [ breadcrumb ] start -->
+        <div class="page-header">
+            <div class="page-block container">
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <div class="page-header-title">
+                            <h5 class="m-b-10">Réclamations</h5>
+                        </div>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP">Gérer les réclamations</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP">Réclamations</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- [ breadcrumb ] end -->
+        <!-- [ Main Content ] start -->
+		<div class="col-xl-12">
+			<div class="container p-3 my-3 border cont">
+				<div class="form-group mb-4">
+				   <div class="card-header col-lg-12"><h1 class="text-center text">Listes des Réclamations</h1></div>
+				   <input id="exampleFormControlInput2" type="text" placeholder="Chercher ...?"
+				     class="form-control form-control-underlined">
+				 </div><br>
+				<!-- table section -->
+			   
+				<table class="table align-middle mb-0 text-center table-responsive-lg" style="overflow-x:auto;">
+				   <thead class="bg countour border text-bold">
+					 <tr>
+					   <th>Nom</th>
+					   <th>Email</th>
+					   <th>Subjet</th>
+					   <th>Contenu de réclamations/th>
+					   <th>Actions</th>
+					   <th></th>
+					 </tr>
+				   </thead>
+				   <tbody *ngFor="let message of messages" >
+					 <tr>
+						<td><p class="fw-normal mb-1">{{ message.nom}}</p></td>
+					   <td><p class="fw-normal mb-1">{{ message.email}}</p></td>
+					   <td><p class="fw-normal mb-1">{{ message.subject}}</p></td>
+                       <td><p class="fw-normal mb-1">{{ message.mess}}</p></td>
+
+					   <td>
+						 <button type="button" class="btn btn-link btn-sm btn-rounded" title="supprimer" *ngIf="message._id" (click)="deleteMessage(message._id)">
+						   <i class="fa fa-trash icon"></i>
+						 </button>
+					   </td>
+             <td>
+              <button type="button" class="btn btn-link btn-sm btn-rounded" title="valider" >
+               <i class="fa fa-check-circle" aria-hidden="true"></i>
+              </button>
+              </td>
+					 </tr>
+					 
+				   </tbody>
+				   
+				 </table>
+                 <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+                </mat-paginator>
+			</div>
 </div>
+
+        <!-- [ Main Content ] end -->
+    </div>
+</section>
+   <!-- Required Js -->
+   <script src="/assets/admin/js/vendor-all.min.js"></script>
+   <script src="/assets/admin/js/plugins/bootstrap.min.js"></script>
+   <script src="/assets/admin/js/ripple.js"></script>
+   <script src="/assets/admin/js/pcoded.min.js"></script>
+<!-- Apex Chart -->
+<script src="/assets/admin/js/plugins/apexcharts.min.js"></script>
+<!-- custom-chart js -->
+<script src="/assets/admin/js/pages/dashboard-main.js"></script>
+</body>
+</html>
