--- a/frontend/src/app/components/reclamation-list/reclamation-list.component.html
+++ b/frontend/src/app/components/reclamation-list/reclamation-list.component.html
@@ -176,7 +176,7 @@
 					   <th>Nom</th>
 					   <th>Email</th>
 					   <th>Subjet</th>
-					   <th>Contenu de réclamations/th>
+					   <th>Contenu de réclamation</th>
 					   <th>Actions</th>
 					   <th></th>
 					 </tr>
