--- a/frontend/src/app/components/message-gestion/message-gestion.component.html
+++ b/frontend/src/app/components/message-gestion/message-gestion.component.html
@@ -9,7 +9,8 @@
           <th scope="col">Nom</th>
           <th scope="col">Email</th>
           <th scope="col">subject</th>
-          <th scope="col">message</th>
+          <th scope="col">message</th>*
+          
         </tr>
       </thead>
       <tbody>
